layout bugs fixed, icon image modified

--- a/CoffinSight/css/about-us.css
+++ b/CoffinSight/css/about-us.css
@@ -262,7 +262,7 @@
   height: 334px;
   left: 21px;
   position: absolute;
-  top: 421px;
+  top: 460px;
   width: 285px;
 }
 
@@ -437,7 +437,7 @@
   mix-blend-mode: normal;
   position: absolute;
   text-align: left;
-  top: 39px;
+  top: 85px;
   width: 327px;
 }
 
@@ -449,7 +449,7 @@
   height: 112px;
   left: 24px;
   position: absolute;
-  top: 275px;
+  top: 300px;
   width: 327px;
 }
 
@@ -478,7 +478,7 @@
   mix-blend-mode: normal;
   position: absolute;
   text-align: left;
-  top: 35px;
+  top: 50px;
   width: 323px;
 }
 
@@ -490,7 +490,7 @@
   height: 145px;
   left: 21px;
   position: absolute;
-  top: 789px;
+  top: 830px;
   width: 330px;
 }
 
@@ -519,7 +519,7 @@
   mix-blend-mode: normal;
   position: absolute;
   text-align: left;
-  top: 36px;
+  top: 80px;
   width: 323px;
 }
 
